Fix profile overflow

--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -14,6 +14,7 @@
 @media screen and (max-width: 920px) {
   .profile__description {
     margin: 0 auto;
+    max-width: 288px;
     font-size: 14px;
     line-height: 17px;
   }
