--- a/blocks/profile/__name-container/profile__name-container.css
+++ b/blocks/profile/__name-container/profile__name-container.css
@@ -7,9 +7,7 @@
 
 @media screen and (max-width: 920px) {
   .profile__name-container {
-    position: relative;
+    padding-left: 14px;
     column-gap: 10px;
-    top: 0;
-    left: 14px;
   }
 }
